--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@ name: Scrape IMDb Top 250
 
 on:
   schedule:
-    - cron: "55 05 * * *"  # Runs daily at 11:00 IST
+    - cron: "00 06 * * *"  # Runs daily at 11:00 IST
   workflow_dispatch:
   # For testing, uncomment the following line to trigger on pushes:
   # push:
@@ -38,4 +38,4 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git add *.json
           git commit -m "Update IMDb Top 250 data [skip ci]" || exit 0
-          git push https://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@github.com/jayaraghavendra/gitact.git main
+          git push https://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@github.com/jayaraghavendra/gitact.git master
